working game with partial timer, but commented out - timer not working

--- a/src/components/naughts-and-crosses.css
+++ b/src/components/naughts-and-crosses.css
@@ -3,12 +3,11 @@
 body {
   background-image: url(./bg.jpg);
   background-repeat: no-repeat;
+  background-color: black !important;
 }
 
-/* @font-face {
-  font-family: 'MyFont';
-  src: local('MyFont'), url(./fonts/MyFont.woff) format('woff');
-} */
-
-/* other formats include: 'woff2', 'truetype, 'opentype',
-                          'embedded-opentype', and 'svg' */
+@media (min-width: 1200px) {
+  body {
+    background-position-x: center;
+  }
+}
